Промежуточный итог 8 спринта. проходит один раз запись - чтение, последующие чтения не проходят, говорит нет Эпика